# alice

./: LICENSE.txt  clean.sh  pyproject.toml  readme.md  setup.py
data/imagenet64/: process.py  readme.txt
experiments/resnet18/: irn18.sh  resnet18.py  rn18_methods.sh  rn18_naq.sh  rn18_pl.sh
src/alice/: __init__.py  alice.py
src/alice/alice11_fused_cuda/: alice11_fused.cu
