[build-system]
requires = ["setuptools >= 74.0", "wheel >= 0.44", "numpy >= 1.26", "torch >=2.2,<2.3"]
build-backend = "setuptools.build_meta"

[project]
name = "alice"
version = "0.1.1"
description = "Alice is an ML optimizer for PyTorch that demonstrates techniques utilizing curvature of expectation."
requires-python = ">=3.10"
authors = [
  {name = "Jed A. Duersch", email = "jduersch@gmail.com"},
]
maintainers = [
  {name = "Jed A. Duersch", email = "jaduers@sandia.gov"}
]
readme = "readme.md"
license = {file = "LICENSE.txt"}
keywords = ["alice", "gradient glass", "Hessian", "quasi-Newton", "nesterov acceleration", "NAQ"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3.8",
  "Environment :: GPU :: NVIDIA CUDA :: 11 :: 11.8",
]

[project.urls]
Documentation = "https://arxiv.org/..."
Repository = "https://github.com/sandialabs/alice"

